# xcmd-qt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
src/: HexagonPart.qml  HexagonShape.qml  Main.qml  SearchboxContainer.qml  TextPart.qml  config_manager.cpp  config_manager.h  main.cpp
